# engage

./: .gitignore  Database.md  DatabaseCreation.sql  DatabaseTestCases.sql  OrganizationDirectory4Kyle.xlsx  README.md  SQLStoredProcedures.sql  TestCases.md  TestRunning.py  Unit Test club input matching  about.html  app.js  contact.html  events.html  events.test.js  html.test.js  index.html  jest.config.js  organizations.html  package-lock.json  package.jason  package.json  signin.html  style.css
backend/: Cargo.toml  OrganizationDirectory4Kyle.csv  README.md  contacts.csv  orgs.csv  tables.sql
backend/.sqlx/: query-1b1c0d1f972e7f38e2f32a91603f88e61a3dafccc4c975714f301a08a4742bc4.json  query-21758ffdc63c76f4a3e0dc5ae7ca189645710bbae3b906995923b74ef9422b57.json  query-29343d76b62a52c332fd25c7bd310d631f78781cf1f5b115a267742185d9b3a9.json  query-3bd49baf7cca887be668de59da0406ed49abeafe4856b48bd717da590ed2a27e.json  query-5482e8713e690f82f1e4aaa0645264edc02155c47e42b2972a44bf60d0545dbf.json  query-bb3ec40cd77317b61edb21f378de1e909be3ae3dc9ddabf423bd7a827a0034b4.json
backend/src/: generate_sql_file.rs  lib.rs  main.rs
