[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_sql_file"
path = "src/generate_sql_file.rs"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
anyhow = "1.0.91"
csv = "1.3.1"
fuzzy-matcher = "0.3.7"
serde = "1.0.215"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "sqlite",
    "json",
    "uuid",
] }
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread", "sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
